--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Lesson1</string>
+    <string name="buttonOpen">Открыть</string>
+    <string name="viewNumber">Number</string>
 </resources>
